<resources>
    <string name="app_name">Jejak Anak</string>
    <string name="welcome_auth">Selamat datang di <font fgcolor="#E84545">Jejak Anak</font>!</string>
    <string name="auth_login_content">Masuk sekarang kemudian pantau lokasi anak anda atau bagikan lokasi ke orang tua anda.</string>
    <string name="login_button">Masuk dengan Google</string>
    <string name="term_n_condition">Dengan mendaftar/masuk, kamu menyetujui syarat dan <font fgcolor="#38A4E1">ketentuan layanan</font> serta <font fgcolor="#38A4E1">kebijakan privasi</font>.</string>
    <string name="map">Map</string>
    <string name="manage">Manage</string>
    <string name="profile">Profile</string>
    <string name="geofence">Pagar Virtual</string>
    <string name="children">Anak-Anak</string>
    <string name="add_button">Tambah Baru</string>
    <string name="add_geofence">Tambah Pagar Virtual</string>
    <string name="label">Label</string>
    <string name="zone_type">Tipe Zona</string>
    <string name="safe_zone">Zona Aman</string>
    <string name="danger_zone">Zona Berbahaya</string>
    <string name="cancel">Batalkan</string>
    <string name="next">Selanjutnya</string>
    <string name="save">Simpan</string>
    <string name="parent">Orang Tua</string>
    <string name="child">Anak</string>
    <string name="error_title">Yah error nih :(</string>
    <string name="error_content">Periksa koneksi internetmu atau klik tombol REFRESH untuk me-refresh halaman. Jika belum bisa, silakan hubungi kami.</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="are_you_sure">Apakah anda yakin?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="update_geofence">Ubah Pagar Virtual</string>
    <string name="empty_title">Yah masih kosong nih</string>
    <string name="empty_geofence_content">Yuk tambah dulu pagar virtualnya.</string>
    <string name="add_child">Daftarkan Anak</string>
    <string name="child_code">Kode Anak</string>
    <string name="empty_child_content">Yuk daftarkan dulu anak kamu.</string>
    <string name="logout_button">Keluar</string>
    <string name="total_geofence">Total pagar virtual yang dibuat:</string>
    <string name="total_child">Total anak yang terdaftar:</string>
    <string name="choose_your_role">Pilih Peran Anda:</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="shared_location_title">Terpantau Orang Tua</string>
    <string name="shared_location_content">Lokasi kamu dibagikan ke orang tua.</string>
    <string name="child_geofence_content">Kamu %s  zona %s</string>
    <string name="parent_geofence_content">%s telah %s dari zona %s %s</string>
    <string name="empty_parent_profile">Kamu belum didaftarkan orang tua kamu :(</string>
    <string name="child_monitored">Pantau Anak</string>
    <string name="child_monitored_content">Anak kamu sedang terpantau oleh pagar virtual.</string>
    <string name="distance_km">%s KM</string>
    <string name="distance_unknown">Jarak anak tidak diketahui</string>
    <string-array name="zone_type_array">
        <item>Zona Aman</item>
        <item>Zona Berbahaya</item>
    </string-array>
    <string name="title_activity_parent_add_geofence_maps">ParentAddGeofenceMapsActivity</string>
    <string name="fill_all_fields">Isi semua kolom</string>
    <string name="phone">No Telp</string>
    <string name="input_phone">Masukan no telp</string>
    <string name="instruction_title">Petunjuk</string>
    <string name="instruction_message">Tekan layar untuk membuat titik-titik yang menjadi sudut pagar virtual secara berurutan dan memiliki setidaknya 3 titik.</string>
    <string name="understand">Mengerti</string>
</resources>