<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container_empty_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:importantForAccessibility="no"
            android:src="@drawable/image_empty" />

        <TextView
            android:id="@+id/tv_empty_title"
            style="@style/font_14_bold_yellow_E9A100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_empty_subtitle"
            style="@style/font_12_normal_dark_blue_180B3F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/empty_child_content"
            android:textAlignment="center" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_child_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>