<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivError"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:src="@drawable/image_error"
            app:layout_constraintBottom_toTopOf="@id/tvErrorTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvErrorTitle"
            style="@style/font_14_bold_red_DC2020"
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:text="@string/error_title"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/tvErrorSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivError" />

        <TextView
            android:id="@+id/tvErrorSubtitle"
            style="@style/font_12_normal_dark_blue_180B3F"
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/error_content"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvErrorTitle" />

        <Button
            android:id="@+id/btn_refresh"
            style="@style/font_14_bold_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_bg_rounded_corner_button_refresh_green_12_full_radius"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvErrorSubtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>