<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_state_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:msv_errorView="@layout/layout_error_common"
    app:msv_loadingView="@layout/layout_loading_common"
    app:msv_viewState="content"
    tools:context=".ui.auth.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auth_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/img_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_welcome"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/auth_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/font_24_bold_dark_blue_180B3F"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_auth"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

            <TextView
                android:id="@+id/tv_welcome_content"
                style="@style/font_14_normal_dark_blue_180B3F"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_login_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
                app:layout_constraintStart_toStartOf="@+id/tv_welcome"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/font_14_bold_white"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/shape_bg_rounded_corner_auth_dark_blue_12_full_radius"
            android:drawableLeft="@drawable/image_google_v_1"
            android:gravity="center"
            android:text="@string/login_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/tv_term_n_condition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_term_n_condition"
            style="@style/font_14_normal_dark_gray_8B929C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/term_n_condition"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.kennyc.view.MultiStateView>